config/samples/flowc.io_v1_deployment.yaml
apiVersion: flowc.io.flowc.io/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: flowc
    app.kubernetes.io/managed-by: kustomize
  name: deployment-sample
spec:
  # TODO(user): Add fields here
