config/samples/flowc.io_v1_gateway.yaml
apiVersion: flowc.io.flowc.io/v1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: flowc
    app.kubernetes.io/managed-by: kustomize
  name: gateway-sample
spec:
  # TODO(user): Add fields here
